sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1i/errors.dfrouter
Error: Edge '' used by detector 'MQ11Fs1' is not known.
Quitting (on error).
